--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- Nav Bar -->
             <div class="navigation">
                 <div class="logo">
-                    CronTech
+                        CronTech
                 </div>
                 <nav>
                     <a href="index.html">Home</a>
@@ -22,12 +22,14 @@
                     <a href="service.html">Services</a>
                 </nav>
             </div>
+
+            <hr class="navSeparator">
       
-            <!-- Nav Bar -->
-            <div class="banner-text">
-                <div class="text-area">
-                <h2>Hello, My name is Mohit Kataria</h2>
-                <h3>Full-Stack Developer</h3>
+            <!-- Main -->
+            <div class="main">
+                <div class="displayText">
+                <h2>Mohit Kataria</h2>
+                <h3>Web Dev</h3>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae fuga laudantium quibusdam sequi totam veniam?</p> -->
                 <a href="about.html">Contact Me</a>
                 </div>
