--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
             <!-- Nav Bar -->
             <div class="navigation">
                 <div class="logo">
-                        CronTech
+                    <a href="index.html">CronTech</a>
                 </div>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="service.html">Services</a>
-                </nav>
+                <div class="nav"> 
+                     <!-- <nav> -->
+                         <a href="index.html">Home</a>
+                         <a href="about.html">About</a>
+                         <a href="skills.html">Skills</a>
+                     <!-- </nav> -->
+                </div>
             </div>
 
             <hr class="navSeparator">
@@ -29,7 +31,7 @@
             <div class="main">
                 <div class="displayText">
                 <h2>Mohit Kataria</h2>
-                <h3>Web Dev</h3>
+                <h3>I'm a Web Dev</h3>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae fuga laudantium quibusdam sequi totam veniam?</p> -->
                 <a href="about.html">Contact Me</a>
                 </div>
