--- a/about.html
+++ b/about.html
@@ -8,28 +8,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="mainWrapper" >
-         <!-- Nav Bar -->
-         <div class="navigation">
-            <div class="logo">
-                CronTech
-            </div>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="service.html">Services</a>
-            </nav>
-        </div>
-
-        <hr>
-        <!-- Main Content -->
-        <main class="aboutContent">
-            <h2>About</h2>
-            <p>
-                
-            </p>
-            <img src="images/mohit_img.jpg" alt="Author_img">
-        </main>
+    <div id="aboutBG">
+        <!-- <div class="mainWrapper" > -->
+            <!-- Nav Bar -->
+            <div class="navigation">
+               <div class="logo">
+                   <a href="index.html">CronTech</a>
+               </div>
+               <div class="nav"> 
+                    <!-- <nav> -->
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="skills.html">Skills</a>
+                    <!-- </nav> -->
+               </div>
+           </div>
+   
+           <hr class="navSeparator">
+           <!-- Main Content -->
+           <main class="aboutContent">
+               <div class="intro">
+                   <h2>About</h2>
+                   <p>
+                        I have five years of professional experience as a software engineer and specialise in full-stack development using Microsoft technologies in the backend. I am a passionate and professional software developer.
+                   </p>
+                   <br>
+                   <p>
+                        I use Node.js for processing, mongoDB for the database, middleware http handling with expressJS
+                   </p>
+               </div>
+               
+               <div class="aboutImg">
+                   <img src="images/mohit_img.jpg" alt="Author_img">
+               </div>
+           </main>
+       <!-- </div> -->
     </div>
 </body>
 </html>
