index page responsivness left

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- In this file, I have used the CSS animations which will 
+     change the background color multiple time with the effects applied.
+     Took reference from w3School,
+     URL: https://www.w3schools.com/css/css3_animations.asp
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +14,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <div class="banner-area"> -->
+    <div class="animatedBg">
         <div class="mainWrapper">
 
             <!-- Nav Bar -->
@@ -30,14 +36,13 @@
             <!-- Main -->
             <div class="main">
                 <div class="displayText">
-                <h2>Mohit Kataria</h2>
-                <h3>I'm a Web Dev</h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae fuga laudantium quibusdam sequi totam veniam?</p> -->
-                <a href="about.html">Contact Me</a>
+                    <h2>Mohit Kataria</h2>
+                    <h3>A Web Dev</h3>
+                    <a href="about.html">Contact Me</a>
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
       
 </body>
 </html>
