comment to be removed

--- a/about.html
+++ b/about.html
@@ -37,8 +37,21 @@
                     </p>
                     <br>
                     <p>
-                         I use Node.js for processing, mongoDB for the database, middleware http handling with expressJS
+                         I use Node.js for processing, mongoDB for the database, middleware http handling with expressJS.
                     </p>
+                    <br>
+                    <p>
+                        Currently, I'm a student in Conestoga college, Kitchener, ON from where I'm pursuing the master diploma in Web development that have a duration of 2 years.  
+                   </p>
+                    <br>
+                   <p>
+                        <strong>This is dummy text, please ignore.</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti, magnam delectus repellat suscipit laudantcessitatibus velit iste natus maiores voluptatibus porro ullam eius modi consectetur! Quod earum laboriosam hic minus nesciunt fuga, voluptates sed ducimus expedita dolorum repellat facere ipsam autem nulla officia iusto voluptatem illo iste eum quas quasi maiores. Aliquid perferendis impedit vel autem.
+                    </p>
+                    <br>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti, magnam delectus repellat suscipit laudti laboriosam ad neque sit nemo quas necessitatibus velit iste natus maiores voluptatibus porro ullam eius modi consectetur! Quod earum laboriosam hic minus nesciunt fuga, voluptates sed ducimus expedita dolorum repellat facere ipsam autem nulla officia iusto voluptatem illo iste eum quas quasi maiores. Aliquid perferendis impedit vel autem.
+                    </p>
+
                 </div>
             <!-- </div> -->
                 
